fixes contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
   background-color: grey;
+  color: #171717;
   margin: 0;
   padding: 0;
 }
